Added IF-MIB::ifXTable - High Capacity (HC) counters

--- a/synology/synology.conf
+++ b/synology/synology.conf
@@ -3,8 +3,8 @@
 ##
  [[inputs.snmp]]
    # List of agents to poll
-#   agents = [ "192.168.1.134:161" ] # required - enter the IP address of your Synology device
-   agents = [ "172.17.0.1" ] # required - enter the IP address of your Synology device
+#   agents = [ "localhost:161" ] # required - enter the IP address of your Synology device
+   agents = [ "172.17.0.1" ]
 
    # Polling interval
    interval = "60s"
@@ -58,6 +58,12 @@
      [[inputs.snmp.table.field]]
        is_tag = true
      oid = "IF-MIB::ifDescr"
+   # IF-MIB::ifXTable contains newer High Capacity (HC) counters that do not overflow as fast for a few of the ifTable counters
+   [[inputs.snmp.table]]
+     oid = "IF-MIB::ifXTable"
+     [[inputs.snmp.table.field]]
+       oid = "IF-MIB::ifDescr"
+       is_tag = true
    #Syno disk
    [[inputs.snmp.table]]
      oid = "SYNOLOGY-DISK-MIB::diskTable"
