Renewed configuration files

--- a/grafana/provisioning/datasources/influxDB.yaml
+++ b/grafana/provisioning/datasources/influxDB.yaml
@@ -1,9 +1,12 @@
+# config file version
+apiVersion: 1
+
 datasources:
   - name: InfluxDB
     type: influxdb
     access: proxy
     database: telegraf
     user: telegraf
-    password: telegraf
+    secureJsonData:
+       password: telegraf
     url: http://localhost:8086
-
