--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -15,6 +15,9 @@
 #
 ;data = /var/lib/grafana
 #
+# Temporary files in `data` directory older than given duration will be removed
+;temp_data_lifetime = 24h
+
 # Directory where grafana can store logs
 #
 ;logs = /var/log/grafana
@@ -39,7 +42,7 @@ protocol = http
 http_port = 3003
 
 # The public facing domain name used to access grafana from a browser
-;domain = localhost
+domain = localhost
 
 # Redirect to correct domain if host header does not match domain
 # Prevents DNS rebinding attacks
@@ -47,7 +50,7 @@ http_port = 3003
 
 # The full public facing url you use in browser, used for redirects and emails
 # If you use reverse proxy and sub path specify full url (with sub path)
-root_url = http://localhost:3003
+root_url =  %(protocol)s://%(domain)s:%(http_port)s/
 
 # Log web requests
 ;router_logging = false
