--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: '3'
 
 services:
   app:
-#    build: artlov/docker-telegraf-influxdb-grafana .
-    image: "artlov/docker-telegraf-influxdb-grafana"
-    ports:
-      - "3003:3003"
-      - "3004:8888"
-      - "8086:8086"
-      - "22022:22"
-      - "8125:8125/udp"
-    volumes:
-      - /volume1/docker/influxdb:/var/lib/influxdb
-      - /volume1/docker/grafana:/var/lib/grafana
-      - /volume1/docker/backups:/var/backups
+#    build: artlov/docker-tig .
+    image: "artlov/docker-tig"
+#    ports:
+#      - "3003:3003"
+#      - "3004:8888"
+#      - "8086:8086"
+#      - "22022:22"
+#      - "8125:8125/udp"
+#    volumes:
+#      - /volume1/docker/influxdb:/var/lib/influxdb
+#      - /volume1/docker/grafana:/var/lib/grafana
+#      - /volume1/docker/backups:/var/backups
 
 
 #test:
