Fixed Grafana plugins path

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,16 @@ services:
   app:
 #    build: artlov/docker-tig .
     image: "artlov/docker-tig"
-#    ports:
-#      - "3003:3003"
-#      - "3004:8888"
-#      - "8086:8086"
-#      - "22022:22"
-#      - "8125:8125/udp"
-#    volumes:
-#      - /volume1/docker/influxdb:/var/lib/influxdb
-#      - /volume1/docker/grafana:/var/lib/grafana
-#      - /volume1/docker/backups:/var/backups
+    ports:
+      - "3003:3003"
+      - "3004:8888"
+      - "8086:8086"
+      - "22022:22"
+      - "8125:8125/udp"
+    volumes:
+      - /volume1/docker/influxdb:/var/lib/influxdb
+      - /volume1/docker/grafana:/var/lib/grafana
+      - /volume1/docker/backups:/var/backups
 
 
 #test:
